fixing overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,35 +22,25 @@ $theme-colors: (
   "dark": $dark,
 );
 
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
-  overflow-x: hidden;
-}
-
 .navbar {
   opacity: 0.98;
   -webkit-box-shadow: 0 8px 6px -6px #999;
   -moz-box-shadow: 0 8px 6px -6px #999;
   box-shadow: 0 8px 6px -6px #999;
 }
-.row {
-  margin-left: 2rem;
-  margin-right: 2rem;
-}
 
 .card {
-  margin-top: 2rem;
+  margin-top: 1rem;
   margin-bottom: 1rem;
-  margin-left: 2px;
-  margin-right: 2px;
+  padding-left: 1px;
+  padding-right: 1px;
 }
 
 .card-companion-text {
-  margin-top: 2rem;
+  margin-top: 1rem;
   margin-bottom: 1rem;
+  padding-left: 1px;
+  padding-right: 1px;
 }
 
 // Import Bootstrap and its default variables
